--- a/Angular/src/app/components/products/edit-product/edit-product.component.html
+++ b/Angular/src/app/components/products/edit-product/edit-product.component.html
@@ -14,64 +14,73 @@
       </div>
       <form #productForm="ngForm">
         <div class="table-content">
+          <!-- ID Field -->
           <div class="form-group p-10 row">
             <div class="col-sm-3">
-              <label for="FirstName" class="p-t-b-10">Nome<span class="requiredStar">*</span></label>
+              <label for="Id" class="p-t-b-10">ID</label>
             </div>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="FirstName" required maxlength="50"
-                [(ngModel)]="EditProductForm.FirstName" name="FirstName" #FirstName="ngModel">
-              <div *ngIf="FirstName.errors && isSubmitted" class="alert alert-danger validationError">
-                <div [hidden]="!FirstName.errors?.['required']">
-                  Nome é obrigatório
+              <input type="number" class="form-control" id="Id" [(ngModel)]="EditProductForm.Id" name="Id" #Id="ngModel">
+            </div>
+          </div>
+          <!-- Brand Field -->
+          <div class="form-group p-10 row">
+            <div class="col-sm-3">
+              <label for="Brand" class="p-t-b-10">Marca<span class="requiredStar">*</span></label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="Brand" required maxlength="50"
+                [(ngModel)]="EditProductForm.Brand" name="Brand" #Brand="ngModel">
+              <div *ngIf="Brand.errors && isSubmitted" class="alert alert-danger validationError">
+                <div [hidden]="!Brand.errors?.['required']">
+                  Marca é obrigatória
                 </div>
               </div>
             </div>
           </div>
+          <!-- ProductCode Field -->
           <div class="form-group p-10 row">
             <div class="col-sm-3">
-              <label for="LastName" class="p-t-b-10">Sobrenome<span class="requiredStar">*</span></label>
+              <label for="ProductCode" class="p-t-b-10">Código do Produto<span class="requiredStar">*</span></label>
             </div>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="LastName" required maxlength="50"
-                [(ngModel)]="EditProductForm.LastName" name="LastName" #LastName="ngModel">
-              <div *ngIf="LastName.errors && isSubmitted" class="alert alert-danger validationError">
-                <div [hidden]="!LastName.errors?.['required']">
-                  Sobrenome é obrigatório
+              <input type="text" class="form-control" id="ProductCode" required maxlength="50"
+                [(ngModel)]="EditProductForm.ProductCode" name="ProductCode" #ProductCode="ngModel">
+              <div *ngIf="ProductCode.errors && isSubmitted" class="alert alert-danger validationError">
+                <div [hidden]="!ProductCode.errors?.['required']">
+                  Código do produto é obrigatório
                 </div>
               </div>
             </div>
           </div>
+          <!-- Description Field -->
           <div class="form-group p-10 row">
             <div class="col-sm-3">
-              <label class="p-t-b-10">Email<span class="requiredStar">*</span></label>
+              <label for="Description" class="p-t-b-10">Descrição</label>
             </div>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="Email" required maxlength="255"
-                [(ngModel)]="EditProductForm.Email" name="Email" #Email="ngModel"
-                pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z0-9]{2,3}$">
-              <div *ngIf="Email.errors && isSubmitted" class="alert alert-danger validationError">
-                <div [hidden]="!Email.errors?.['required']">
-                  Email is required
-                </div>
-                <div [hidden]="!Email.errors?.['touched'] && !Email.errors?.['pattern']">
-                  Email is invalid
+              <textarea class="form-control" id="Description" [(ngModel)]="EditProductForm.Description" name="Description"
+                #Description="ngModel"></textarea>
+            </div>
+          </div>
+          <!-- Value Field -->
+          <div class="form-group p-10 row">
+            <div class="col-sm-3">
+              <label for="Value" class="p-t-b-10">Valor<span class="requiredStar">*</span></label>
+            </div>
+            <div class="col-sm-9">
+              <input type="number" step="0.01" class="form-control" id="Value" required
+                [(ngModel)]="EditProductForm.Value" name="Value" #Value="ngModel">
+              <div *ngIf="Value.errors && isSubmitted" class="alert alert-danger validationError">
+                <div [hidden]="!Value.errors?.['required']">
+                  Valor é obrigatório
                 </div>
               </div>
             </div>
           </div>
-        <div class="form-group p-10 row">
-          <div class="col-sm-3">
-            <label class="p-t-b-10">Curiculum</label>
+          <div class="table-footer">
+            <button class="btn btn-success" (click)="EditProduct(productForm.form.valid)">Submit</button>
           </div>
-          <div class="col-sm-9">
-            <textarea class="form-control" id="Curriculum" [(ngModel)]="EditProductForm.Curriculum" name="Curriculum"
-              #Curriculum="ngModel">></textarea>
-          </div>
-        </div>
-        </div>
-        <div class="table-footer">
-          <button class="btn btn-success" (click)="EditProduct(productForm.form.valid)">Submit</button>
         </div>
       </form>
     </div>
