--- a/Angular/src/app/components/products/list-product/list-product.component.html
+++ b/Angular/src/app/components/products/list-product/list-product.component.html
@@ -1,42 +1,46 @@
 <div class="container-xl">
-    <div class="table-responsive">
-    <div class="table-wrapper">
-      <div class="table-title">
-        <div class="row">
-          <div class="col-sm-6">
-            <h4><b>Gerenciar Produtos</b></h4>
+  <div class="table-responsive">
+      <div class="table-wrapper">
+          <div class="table-title">
+              <div class="row">
+                  <div class="col-sm-6">
+                      <h4><b>Gerenciar Produtos</b></h4>
+                  </div>
+                  <div class="col-sm-6">
+                      <button class="btn btn-success" (click)="AddProduct()">
+                          <i class='fas fa-plus-circle'></i><span> ADD</span>
+                      </button>
+                  </div>
+              </div>
           </div>
-          <div class="col-sm-6">
-            <button class="btn btn-success" (click)="AddCandidate()">
-              <i class='fas fa-plus-circle'></i><span> ADD</span>
-            </button>
-          </div>
-        </div>
+          <table class="table table-striped table-hover table-bordered table-content">
+              <thead>
+                  <tr class="center-align">
+                      <th>ID</th>
+                      <th>Marca</th>
+                      <th>Código do Produto</th>
+                      <th>Descrição</th>
+                      <th>Valor</th>
+                      <th>Ações</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr *ngFor="let product of productLIst" class="center-align">
+                      <td>{{ product.id }}</td>
+                      <td>{{ product.brand }}</td>
+                      <td>{{ product.productCode }}</td>
+                      <td>{{ product.description }}</td>
+                      <td>{{ product.value }}</td>
+                      <td>
+                          <a href="#" [routerLink]="['/EditProduct/', product.id]" class="btn"><i class="fa fa-edit edit"></i></a>
+                          <button type="button" (click)="deleteProductConfirmation(product)" class="btn"><i class='fas fa-trash-alt delete'></i></button>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td *ngIf="productLIst.length == 0" colspan="6">Não foram encontrados produtos.</td>
+                  </tr>
+              </tbody>
+          </table>
       </div>
-      <table class="table table-striped table-hover table-bordered table-content">
-        <thead>
-          <tr class="center-align">
-            <th>Nome</th>
-            <th>Sobrenome</th>
-            <th>Email</th>
-            <th>Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let candidate of candidateList" class="center-align">
-            <td>{{ candidate.firstName }}</td>
-            <td>{{ candidate.lastName }}</td>
-            <td>{{ candidate.email }}</td>
-            <td>
-              <a href="#" [routerLink]="['/EditProduct/', candidate.id]" class="btn"><i class="fa fa-edit edit"></i></a>
-              <button type="button" (click)="deleteCandidateConfirmation(candidate)" class="btn"><i class='fas fa-trash-alt delete'></i></button>
-            </td>
-          </tr>
-          <tr>
-            <td *ngIf="candidateList.length == 0" colspan="6">Não foram encontrados candidatos.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
